Update Vietnamese localization backend with new translations

--- a/backend/lang/vi.json
+++ b/backend/lang/vi.json
@@ -1,91 +1,91 @@
 {
-    "Older First": "",
-    "Newest First": "",
-    "Recently Updated First": "",
-    "Recently Updated Last": "",
-    "First Name A-Z": "",
-    "First Name Z-A": "",
-    "Last Name A-Z": "",
-    "Last Name Z-A": "",
-    "Status A-Z": "",
-    "Status Z-A": "",
-    "Name A-Z": "",
-    "Name Z-A": "",
-    "Oldest first": "",
-    "Newest first": "",
-    "Updated oldest first": "",
-    "Updated newest first": "",
-    "Most capacity used": "",
-    "Least capacity used": "",
-    "Least capacity": "",
-    "Most capacity": "",
-    "Expires soonest": "",
-    "Expires latest": "",
-    "Closest start date": "",
-    "Furthest start date": "",
-    "Closest end date": "",
-    "Furthest end date": "",
-    "Recently Updated": "",
-    "Least Recently Updated": "",
-    "Sent Date Oldest": "",
-    "Sent Date Newest": "",
-    "Subject A-Z": "",
-    "Subject Z-A": "",
-    "Oldest First": "",
-    "Buyer Name A-Z": "",
-    "Buyer Name Z-A": "",
-    "Amount Ascending": "",
-    "Amount Descending": "",
-    "Buyer Email A-Z": "",
-    "Buyer Email Z-A": "",
-    "Order # Ascending": "",
-    "Order # Descending": "",
-    "Homepage order": "",
-    "Title A-Z": "",
-    "Title Z-A": "",
-    "Sale start date closest": "",
-    "Sale start date furthest": "",
-    "Sale end date closest": "",
-    "Sale end date furthest": "",
-    "Code Name A-Z": "",
-    "Code Name Z-A": "",
-    "Usage Count Ascending": "",
-    "Usage Count Descending": "",
-    "Reserved": "",
-    "Cancelled": "",
-    "Completed": "",
-    "Awaiting offline payment": "",
-    "ID": "",
-    "First Name": "",
-    "Last Name": "",
-    "Email": "",
-    "Status": "",
-    "Is Checked In": "",
-    "Checked In At": "",
-    "Product ID": "",
-    "Product Name": "",
-    "Event ID": "",
-    "Public ID": "",
-    "Short ID": "",
-    "Created Date": "",
-    "Last Updated Date": "",
-    "Notes": "",
-    "Total Before Additions": "",
-    "Total Gross": "",
-    "Total Tax": "",
-    "Total Fee": "",
-    "Total Refunded": "",
-    "Payment Status": "",
-    "Refund Status": "",
-    "Currency": "",
-    "Created At": "",
-    "Payment Gateway": "",
-    "Is Partially Refunded": "",
-    "Is Fully Refunded": "",
-    "Is Free Order": "",
-    "Is Manually Created": "",
-    "Billing Address": "",
-    "Promo Code": "",
+    "Older First": "Cũ nhất trước",
+    "Newest First": "Mới nhất trước",
+    "Recently Updated First": "Cập nhật gần đây nhất",
+    "Recently Updated Last": "Cập nhật cũ nhất",
+    "First Name A-Z": "Tên A-Z",
+    "First Name Z-A": "Tên Z-A",
+    "Last Name A-Z": "Họ A-Z",
+    "Last Name Z-A": "Họ Z-A",
+    "Status A-Z": "Trạng thái A-Z",
+    "Status Z-A": "Trạng thái Z-A",
+    "Name A-Z": "Tên A-Z",
+    "Name Z-A": "Tên Z-A",
+    "Oldest first": "Cũ nhất trước",
+    "Newest first": "Mới nhất trước",
+    "Updated oldest first": "Cập nhật cũ nhất trước",
+    "Updated newest first": "Cập nhật mới nhất trước",
+    "Most capacity used": "Sức chứa đã dùng nhiều nhất",
+    "Least capacity used": "Sức chứa đã dùng ít nhất",
+    "Least capacity": "Sức chứa ít nhất",
+    "Most capacity": "Sức chứa nhiều nhất",
+    "Expires soonest": "Hết hạn sớm nhất",
+    "Expires latest": "Hết hạn muộn nhất",
+    "Closest start date": "Ngày bắt đầu gần nhất",
+    "Furthest start date": "Ngày bắt đầu xa nhất",
+    "Closest end date": "Ngày kết thúc gần nhất",
+    "Furthest end date": "Ngày kết thúc xa nhất",
+    "Recently Updated": "Mới cập nhật",
+    "Least Recently Updated": "Cập nhật cũ nhất",
+    "Sent Date Oldest": "Ngày gửi cũ nhất",
+    "Sent Date Newest": "Ngày gửi mới nhất",
+    "Subject A-Z": "Tiêu đề A-Z",
+    "Subject Z-A": "Tiêu đề Z-A",
+    "Oldest First": "Cũ nhất trước",
+    "Buyer Name A-Z": "Tên người mua A-Z",
+    "Buyer Name Z-A": "Tên người mua Z-A",
+    "Amount Ascending": "Số tiền tăng dần",
+    "Amount Descending": "Số tiền giảm dần",
+    "Buyer Email A-Z": "Email người mua A-Z",
+    "Buyer Email Z-A": "Email người mua Z-A",
+    "Order # Ascending": "Số đơn hàng tăng dần",
+    "Order # Descending": "Số đơn hàng giảm dần",
+    "Homepage order": "Thứ tự trang chủ",
+    "Title A-Z": "Tiêu đề A-Z",
+    "Title Z-A": "Tiêu đề Z-A",
+    "Sale start date closest": "Ngày bắt đầu bán gần nhất",
+    "Sale start date furthest": "Ngày bắt đầu bán xa nhất",
+    "Sale end date closest": "Ngày kết thúc bán gần nhất",
+    "Sale end date furthest": "Ngày kết thúc bán xa nhất",
+    "Code Name A-Z": "Tên mã A-Z",
+    "Code Name Z-A": "Tên mã Z-A",
+    "Usage Count Ascending": "Số lần sử dụng tăng dần",
+    "Usage Count Descending": "Số lần sử dụng giảm dần",
+    "Reserved": "Đã đặt",
+    "Cancelled": "Đã hủy",
+    "Completed": "Hoàn thành",
+    "Awaiting offline payment": "Đang chờ thanh toán offline",
+    "ID": "Mã số",
+    "First Name": "Tên",
+    "Last Name": "Họ",
+    "Email": "Email",
+    "Status": "Trạng thái",
+    "Is Checked In": "Đã check-in",
+    "Checked In At": "Thời gian check-in",
+    "Product ID": "Mã sản phẩm",
+    "Product Name": "Tên sản phẩm",
+    "Event ID": "Mã sự kiện",
+    "Public ID": "Mã công khai",
+    "Short ID": "Mã ngắn",
+    "Created Date": "Ngày tạo",
+    "Last Updated Date": "Ngày cập nhật cuối",
+    "Notes": "Ghi chú",
+    "Total Before Additions": "Tổng trước phụ phí",
+    "Total Gross": "Tổng gộp",
+    "Total Tax": "Tổng thuế",
+    "Total Fee": "Tổng phí",
+    "Total Refunded": "Tổng hoàn tiền",
+    "Payment Status": "Trạng thái thanh toán",
+    "Refund Status": "Trạng thái hoàn tiền",
+    "Currency": "Tiền tệ",
+    "Created At": "Tạo lúc",
+    "Payment Gateway": "Cổng thanh toán",
+    "Is Partially Refunded": "Đã hoàn tiền một phần",
+    "Is Fully Refunded": "Đã hoàn tiền toàn bộ",
+    "Is Free Order": "Là đơn hàng miễn phí",
+    "Is Manually Created": "Được tạo thủ công",
+    "Billing Address": "Địa chỉ thanh toán",
+    "Promo Code": "Mã khuyến mãi",
     "Account registration is disabled": "",
     "The invitation has expired": "",
     "The invitation is invalid": "",
