Update Vietnamese localization frontend with new translations and corrections

--- a/frontend/src/locales/vi.po
+++ b/frontend/src/locales/vi.po
@@ -982,11 +982,11 @@ msgstr ""
 
 #: src/components/common/StatBoxes/index.tsx:51
 msgid "Completed orders"
-msgstr ""
+msgstr "Đơn hàng đã hoàn thành"
 
 #: src/components/routes/event/EventDashboard/index.tsx:105
 msgid "Completed Orders"
-msgstr ""
+msgstr "Đơn hàng đã hoàn thành"
 
 #: src/components/common/WidgetEditor/index.tsx:287
 msgid "Component Code"
@@ -998,7 +998,7 @@ msgstr ""
 
 #: src/utilites/confirmationDialog.tsx:11
 msgid "Confirm"
-msgstr ""
+msgstr "Xác nhận"
 
 #: src/components/routes/profile/ConfirmEmailChange/index.tsx:51
 #: src/components/routes/profile/ConfirmEmailChange/index.tsx:56
@@ -1101,7 +1101,7 @@ msgstr "Sử dụng thông tin này cho tất cả người tham dự"
 
 #: src/components/common/AttendeeTicket/index.tsx:91
 msgid "Copy Link"
-msgstr ""
+msgstr "Sao chép Link"
 
 #: src/components/common/PromoCodeTable/index.tsx:177
 #: src/components/modals/ShareModal/index.tsx:243
@@ -1618,7 +1618,7 @@ msgstr ""
 #: src/components/routes/product-widget/CollectInformation/index.tsx:395
 #: src/components/routes/product-widget/CollectInformation/index.tsx:396
 msgid "Email Address"
-msgstr ""
+msgstr "Địa chỉ Email"
 
 #: src/components/routes/profile/ManageProfile/index.tsx:77
 msgid "Email change cancelled successfully"
@@ -1889,7 +1889,7 @@ msgstr ""
 #: src/components/routes/product-widget/CollectInformation/index.tsx:271
 #: src/components/routes/product-widget/CollectInformation/index.tsx:382
 msgid "First name"
-msgstr "Tên đầu tiên"
+msgstr "Tên"
 
 #: src/components/common/QuestionsTable/index.tsx:205
 #: src/components/modals/EditUserModal/index.tsx:71
@@ -1900,11 +1900,11 @@ msgstr "Tên đầu tiên"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:381
 #: src/components/routes/profile/ManageProfile/index.tsx:135
 msgid "First Name"
-msgstr "Tên đầu tiên"
+msgstr "Tên"
 
 #: src/components/routes/auth/AcceptInvitation/index.tsx:28
 msgid "First name must be between 1 and 50 characters"
-msgstr "Tên đầu tiên phải nằm trong khoảng từ 1 đến 50 ký tự"
+msgstr "Tên của bạn phải nằm trong khoảng từ 1 đến 50 ký tự"
 
 #: src/components/common/QuestionsTable/index.tsx:328
 msgid "First Name, Last Name, and Email Address are default questions and are always included in the checkout process."
@@ -2007,7 +2007,7 @@ msgstr "Tổng doanh số"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:281
 msgid "Guests"
-msgstr "Khách"
+msgstr "Khách mời"
 
 #: src/components/routes/product-widget/SelectProducts/index.tsx:432
 msgid "Have a promo code?"
@@ -2114,11 +2114,11 @@ msgstr "Việc ẩn một sản phẩm sẽ ngăn người dùng xem nó trên t
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:115
 msgid "Homepage Design"
-msgstr "Thiết kế trang chủ"
+msgstr "Thiết kế trang sự kiện"
 
 #: src/components/layouts/Event/index.tsx:67
 msgid "Homepage Designer"
-msgstr "Thiết kế trang chủ"
+msgstr "Thiết kế trang sự kiện"
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:174
 msgid "Homepage Preview"
@@ -2890,7 +2890,7 @@ msgstr "Đặt hàng bị hủy"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:62
 msgid "Order Completed"
-msgstr "Đơn hàng hoàn thành"
+msgstr "Đơn hàng đã hoàn thành"
 
 #: src/components/forms/WebhookForm/index.tsx:52
 msgid "Order Created"
@@ -2929,11 +2929,11 @@ msgstr "Câu hỏi đặt hàng"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:112
 msgid "Order Reference"
-msgstr ""
+msgstr "Mã đơn hàng"
 
 #: src/components/forms/WebhookForm/index.tsx:70
 msgid "Order Refunded"
-msgstr "Đơn đặt hàng được hoàn lại"
+msgstr "Đơn đặt hàng đã hoàn lại"
 
 #: src/components/routes/event/orders.tsx:46
 msgid "Order Status"
@@ -2978,7 +2978,7 @@ msgstr "Tên tổ chức"
 #: src/components/routes/events/Dashboard/index.tsx:113
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:186
 msgid "Organizer"
-msgstr "Nhà tổ chức"
+msgstr "Ban tổ chức"
 
 #: src/components/modals/CreateEventModal/index.tsx:41
 msgid "Organizer is required"
@@ -2986,7 +2986,7 @@ msgstr "Người tổ chức là bắt buộc"
 
 #: src/components/forms/OrganizerForm/index.tsx:27
 msgid "Organizer Name"
-msgstr "Tên nhà tổ chức"
+msgstr "Tên ban tổ chức"
 
 #: src/components/modals/EditUserModal/index.tsx:57
 #: src/components/modals/InviteUserModal/index.tsx:49
@@ -3335,7 +3335,7 @@ msgstr "Câu hỏi sản phẩm"
 
 #: src/components/routes/event/EventDashboard/index.tsx:85
 msgid "Product Sales"
-msgstr "Bán hàng sản phẩm"
+msgstr "Bán Hàng"
 
 #: src/components/common/ProductSelector/index.tsx:63
 msgid "Product Tier"
@@ -3366,15 +3366,15 @@ msgstr "Sản phẩm"
 
 #: src/components/common/EventCard/index.tsx:126
 msgid "products sold"
-msgstr "Sản phẩm được bán"
+msgstr "Sản phẩm đã bán"
 
 #: src/components/common/StatBoxes/index.tsx:21
 msgid "Products sold"
-msgstr "Sản phẩm được bán"
+msgstr "Sản phẩm đã bán"
 
 #: src/components/routes/event/EventDashboard/index.tsx:106
 msgid "Products Sold"
-msgstr "Sản phẩm được bán"
+msgstr "Sản phẩm đã bán"
 
 #: src/components/common/ProductsTable/SortableProduct/index.tsx:178
 msgid "Products sorted successfully"
@@ -3513,7 +3513,7 @@ msgstr "Trạng thái hoàn trả"
 #: src/components/routes/event/orders.tsx:30
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:53
 msgid "Refunded"
-msgstr "Được hoàn lại"
+msgstr "Đã hoàn lại"
 
 #: src/components/routes/auth/Register/index.tsx:129
 msgid "Register"
@@ -3765,11 +3765,11 @@ msgstr ""
 
 #: src/components/modals/CreateAttendeeModal/index.tsx:150
 msgid "Select Ticket"
-msgstr ""
+msgstr "Chọn Vé"
 
 #: src/components/forms/CheckInListForm/index.tsx:26
 msgid "Select tickets"
-msgstr ""
+msgstr "Chọn Vé"
 
 #: src/components/common/ReportTable/index.tsx:261
 msgid "Select time period"
@@ -4140,7 +4140,7 @@ msgstr "Sự kiện cập nhật thành công"
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:84
 msgid "Successfully Updated Homepage Design"
-msgstr "Thiết kế trang chủ được cập nhật thành công"
+msgstr "Thiết kế trang sự kiện được cập nhật thành công"
 
 #: src/components/routes/event/Settings/Sections/HomepageAndCheckoutSettings/index.tsx:50
 msgid "Successfully Updated Homepage Settings"
@@ -4507,7 +4507,7 @@ msgstr "Thời gian được sử dụng"
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:181
 #: src/components/routes/profile/ManageProfile/index.tsx:161
 msgid "Timezone"
-msgstr ""
+msgstr "Múi giờ"
 
 #: src/components/forms/PromoCodeForm/index.tsx:36
 msgid "TIP"
@@ -4553,11 +4553,11 @@ msgstr "Tổng tiền đặt hàng"
 #: src/components/common/OrderDetails/index.tsx:67
 #: src/components/modals/RefundOrderModal/index.tsx:82
 msgid "Total refunded"
-msgstr "Tổng được hoàn lại"
+msgstr "Tổng đã hoàn lại"
 
 #: src/components/routes/event/EventDashboard/index.tsx:144
 msgid "Total Refunded"
-msgstr "Tổng được hoàn lại"
+msgstr "Tổng đã hoàn lại"
 
 #: src/components/modals/RefundOrderModal/index.tsx:90
 msgid "Total remaining"
@@ -4876,7 +4876,7 @@ msgstr "Mã này áp dụng cho sản phẩm nào? (Mặc định áp dụng cho
 
 #: src/components/forms/CapaciyAssigmentForm/index.tsx:48
 msgid "What products should this capacity apply to?"
-msgstr "Sản phẩm nào nên áp dụng sức chứa này?"
+msgstr "Sản phẩm nào nên áp dụng công suất này?"
 
 #: src/components/forms/QuestionForm/index.tsx:180
 msgid "What time will you be arriving?"
@@ -5120,7 +5120,7 @@ msgstr "Bạn sẽ cần một vé trước khi bạn có thể tạo một danh
 
 #: src/components/modals/CreateCapacityAssignmentModal/index.tsx:51
 msgid "You'll need at a product before you can create a capacity assignment."
-msgstr "Bạn sẽ cần tại một sản phẩm trước khi bạn có thể tạo một sự phân công sức chứa."
+msgstr "Bạn sẽ cần tại một sản phẩm trước khi bạn có thể tạo một sự phân công công suất."
 
 #: src/components/common/ProductsTable/ProductsBlankSlate/index.tsx:43
 msgid "You'll need at least one product to get started. Free, paid or let the user decide what to pay."
@@ -5148,7 +5148,7 @@ msgstr "Trang web tuyệt vời của bạn 🎉"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:263
 msgid "Your Details"
-msgstr "Chi tiết của bạn"
+msgstr "Thông tin của bạn"
 
 #: src/components/routes/auth/ForgotPassword/index.tsx:52
 msgid "Your Email"
@@ -5201,7 +5201,7 @@ msgstr "Thanh toán của bạn không thành công. Vui lòng thử lại."
 
 #: src/components/routes/product-widget/AttendeeProductAndInformation/index.tsx:35
 msgid "Your product for"
-msgstr "Sản phẩm của bạn cho"
+msgstr "Sản phẩm cho"
 
 #: src/components/modals/RefundOrderModal/index.tsx:58
 msgid "Your refund is processing."
