--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -1149,7 +1149,7 @@ msgstr "Palabras clave separadas por comas que describen el evento. Estos serán
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:440
 msgid "Complete Order"
-msgstr "Orden completa"
+msgstr "Completar Orden"
 
 #: src/components/routes/product-widget/CollectInformation/index.tsx:210
 msgid "Complete payment"
@@ -2207,7 +2207,7 @@ msgstr "Primer número de factura"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:271
 #: src/components/routes/product-widget/CollectInformation/index.tsx:382
 msgid "First name"
-msgstr "Nombre de pila"
+msgstr "Primer Nombre"
 
 #: src/components/common/QuestionsTable/index.tsx:205
 #: src/components/modals/EditUserModal/index.tsx:71
@@ -2218,7 +2218,7 @@ msgstr "Nombre de pila"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:381
 #: src/components/routes/profile/ManageProfile/index.tsx:135
 msgid "First Name"
-msgstr "Nombre de pila"
+msgstr "Primer Nombre"
 
 #: src/components/routes/auth/AcceptInvitation/index.tsx:28
 msgid "First name must be between 1 and 50 characters"
