--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -22,15 +22,15 @@ msgstr "'No hay nada que mostrar todavía'"
 #~ "\"\"Due to the high risk of spam, we require manual verification before you can send messages.\n"
 #~ "\"\"Please contact us to request access."
 #~ msgstr ""
-#~ "\"\"Debido al alto riesgo de spam, requerimos una verificación manual antes de que pueda enviar mensajes.\n"
-#~ "\"\"Por favor, contáctenos para solicitar acceso.\"\""
+#~ "\"\"Debido al alto riesgo de spam, requerimos verificación manual antes de que puedas enviar mensajes.\n"
+#~ "\"\"Por favor, contáctanos para solicitar acceso.\"\""
 
 #: src/components/routes/auth/ForgotPassword/index.tsx:40
 #~ msgid ""
 #~ "\"\"If you have an account with us, you will receive an email with instructions on how to reset your\n"
 #~ "\"\"password."
 #~ msgstr ""
-#~ "\"\"Si tiene una cuenta con nosotros, recibirá un correo electrónico con instrucciones sobre cómo restablecer su\n"
+#~ "\"\"Si tienes una cuenta con nosotros, recibirás un correo electrónico con instrucciones para restablecer tu\n"
 #~ "\"\"contraseña.\"\""
 
 #: src/components/common/ReportTable/index.tsx:303
@@ -1245,7 +1245,7 @@ msgstr "Documentación de conexión"
 
 #: src/components/routes/event/EventDashboard/index.tsx:213
 msgid "Connect payment processing"
-msgstr ""
+msgstr "Conectar procesamiento de pagos"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
@@ -2844,7 +2844,7 @@ msgstr "Comencemos creando tu primer organizador."
 
 #: src/components/routes/event/EventDashboard/index.tsx:215
 msgid "Link your Stripe account to receive funds from ticket sales."
-msgstr ""
+msgstr "Vincula tu cuenta de Stripe para recibir fondos de la venta de entradas."
 
 #: src/components/routes/event/Webhooks/index.tsx:21
 msgid "Loading Webhooks"
@@ -4057,7 +4057,7 @@ msgstr "Proporcione contexto adicional o instrucciones para esta pregunta. Utili
 
 #: src/components/routes/event/EventDashboard/index.tsx:180
 msgid "Publish Event"
-msgstr ""
+msgstr "Publicar Evento"
 
 #: src/components/common/GlobalMenu/index.tsx:25
 #~ msgid "Purchase License"
@@ -4121,7 +4121,7 @@ msgstr "Recipiente"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:110
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:195
 msgid "Redirecting to Stripe..."
-msgstr ""
+msgstr "Redirigiendo a Stripe..."
 
 #: src/components/common/OrdersTable/index.tsx:204
 #: src/components/common/OrdersTable/index.tsx:274
@@ -5476,7 +5476,7 @@ msgstr "Pedido no pagado"
 
 #: src/components/routes/event/EventDashboard/index.tsx:191
 msgid "Unpublish Event"
-msgstr ""
+msgstr "Despublicar Evento"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -6107,7 +6107,7 @@ msgstr "Su solicitud de cambio de correo electrónico a <0>{0}</0> está pendien
 
 #: src/components/routes/event/EventDashboard/index.tsx:171
 msgid "Your event must be live before you can sell tickets to attendees."
-msgstr ""
+msgstr "Tu evento debe estar activo antes de que puedas vender entradas a los asistentes."
 
 #: src/components/routes/event/EventDashboard/index.tsx:164
 #~ msgid "Your event must be live before you can sell tickets."
