--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -22,7 +22,7 @@ msgstr "\"Il n'y a rien à montrer pour l'instant\""
 #~ "\"\"Due to the high risk of spam, we require manual verification before you can send messages.\n"
 #~ "\"\"Please contact us to request access."
 #~ msgstr ""
-#~ "\"\"En raison du risque élevé de spam, nous exigeons une vérification manuelle avant que vous puissiez envoyer des messages.\n"
+#~ "\"\"En raison du risque élevé de spam, une vérification manuelle est requise avant de pouvoir envoyer des messages.\n"
 #~ "\"\"Veuillez nous contacter pour demander l'accès.\"\""
 
 #: src/components/routes/auth/ForgotPassword/index.tsx:40
@@ -30,7 +30,7 @@ msgstr "\"Il n'y a rien à montrer pour l'instant\""
 #~ "\"\"If you have an account with us, you will receive an email with instructions on how to reset your\n"
 #~ "\"\"password."
 #~ msgstr ""
-#~ "\"\"Si vous avez un compte chez nous, vous recevrez un e-mail avec des instructions sur la façon de réinitialiser votre\n"
+#~ "\"\"Si vous avez un compte chez nous, vous recevrez un e-mail avec les instructions pour réinitialiser votre\n"
 #~ "\"\"mot de passe.\"\""
 
 #: src/components/common/ReportTable/index.tsx:303
@@ -1245,7 +1245,7 @@ msgstr "Documentation de connexion"
 
 #: src/components/routes/event/EventDashboard/index.tsx:213
 msgid "Connect payment processing"
-msgstr ""
+msgstr "Connecter le traitement des paiements"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
@@ -2845,7 +2845,7 @@ msgstr "Commençons par créer votre premier organisateur"
 
 #: src/components/routes/event/EventDashboard/index.tsx:215
 msgid "Link your Stripe account to receive funds from ticket sales."
-msgstr ""
+msgstr "Liez votre compte Stripe pour recevoir les fonds provenant des ventes de billets."
 
 #: src/components/routes/event/Webhooks/index.tsx:21
 msgid "Loading Webhooks"
@@ -4058,7 +4058,7 @@ msgstr "Fournissez un contexte ou des instructions supplémentaires pour cette q
 
 #: src/components/routes/event/EventDashboard/index.tsx:180
 msgid "Publish Event"
-msgstr ""
+msgstr "Publier l'événement"
 
 #: src/components/common/GlobalMenu/index.tsx:25
 #~ msgid "Purchase License"
@@ -4122,7 +4122,7 @@ msgstr "Destinataire"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:110
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:195
 msgid "Redirecting to Stripe..."
-msgstr ""
+msgstr "Redirection vers Stripe..."
 
 #: src/components/common/OrdersTable/index.tsx:204
 #: src/components/common/OrdersTable/index.tsx:274
@@ -5481,7 +5481,7 @@ msgstr "Commande impayée"
 
 #: src/components/routes/event/EventDashboard/index.tsx:191
 msgid "Unpublish Event"
-msgstr ""
+msgstr "Annuler la publication de l'événement"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -6112,7 +6112,7 @@ msgstr "Votre demande de modification par e-mail en <0>{0}</0> est en attente. S
 
 #: src/components/routes/event/EventDashboard/index.tsx:171
 msgid "Your event must be live before you can sell tickets to attendees."
-msgstr ""
+msgstr "Votre événement doit être en ligne avant que vous puissiez vendre des billets aux participants."
 
 #: src/components/routes/event/EventDashboard/index.tsx:164
 #~ msgid "Your event must be live before you can sell tickets."
