--- a/frontend/src/locales/pt.po
+++ b/frontend/src/locales/pt.po
@@ -30,7 +30,7 @@ msgstr "'Não há nada para mostrar ainda'"
 #~ "\"\"If you have an account with us, you will receive an email with instructions on how to reset your\n"
 #~ "\"\"password."
 #~ msgstr ""
-#~ "\"\"Se você tem uma conta conosco, receberá um e-mail com instruções sobre como redefinir sua\n"
+#~ "\"\"Se você tiver uma conta conosco, receberá um e-mail com instruções de como redefinir sua\n"
 #~ "\"\"senha.\"\""
 
 #: src/components/common/ReportTable/index.tsx:303
@@ -1245,7 +1245,7 @@ msgstr "Documentação de conexão"
 
 #: src/components/routes/event/EventDashboard/index.tsx:213
 msgid "Connect payment processing"
-msgstr ""
+msgstr "Conectar processamento de pagamento"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
@@ -2844,7 +2844,7 @@ msgstr "Vamos começar criando seu primeiro organizador"
 
 #: src/components/routes/event/EventDashboard/index.tsx:215
 msgid "Link your Stripe account to receive funds from ticket sales."
-msgstr ""
+msgstr "Conecte sua conta Stripe para receber fundos das vendas de ingressos."
 
 #: src/components/routes/event/Webhooks/index.tsx:21
 msgid "Loading Webhooks"
@@ -4057,7 +4057,7 @@ msgstr "Forneça contexto adicional ou instruções para esta pergunta. Use este
 
 #: src/components/routes/event/EventDashboard/index.tsx:180
 msgid "Publish Event"
-msgstr ""
+msgstr "Publicar Evento"
 
 #: src/components/common/GlobalMenu/index.tsx:25
 #~ msgid "Purchase License"
@@ -4121,7 +4121,7 @@ msgstr "Destinatário"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:110
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:195
 msgid "Redirecting to Stripe..."
-msgstr ""
+msgstr "Redirecionando para o Stripe..."
 
 #: src/components/common/OrdersTable/index.tsx:204
 #: src/components/common/OrdersTable/index.tsx:274
@@ -5476,7 +5476,7 @@ msgstr "Pedido não pago"
 
 #: src/components/routes/event/EventDashboard/index.tsx:191
 msgid "Unpublish Event"
-msgstr ""
+msgstr "Despublicar Evento"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -6107,7 +6107,7 @@ msgstr "Sua solicitação de e-mail para <0>{0}</0> está pendente. Por favor, v
 
 #: src/components/routes/event/EventDashboard/index.tsx:171
 msgid "Your event must be live before you can sell tickets to attendees."
-msgstr ""
+msgstr "Seu evento deve estar ativo antes que você possa vender ingressos para os participantes."
 
 #: src/components/routes/event/EventDashboard/index.tsx:164
 #~ msgid "Your event must be live before you can sell tickets."
