--- a/frontend/src/locales/vi.po
+++ b/frontend/src/locales/vi.po
@@ -31,7 +31,7 @@ msgstr "'không có gì để hiển thị'"
 #~ "\"\"password."
 #~ msgstr ""
 #~ "\"\"Nếu bạn có tài khoản với chúng tôi, bạn sẽ nhận được email với hướng dẫn cách đặt lại\n"
-#~ "\"\"mật khẩu của bạn.\"\""
+#~ "\"\"mật khẩu của mình.\"\""
 
 #: src/components/forms/QuestionForm/index.tsx:189
 #~ msgid ""
@@ -1106,7 +1106,7 @@ msgstr "Tài liệu kết nối"
 
 #: src/components/routes/event/EventDashboard/index.tsx:213
 msgid "Connect payment processing"
-msgstr ""
+msgstr "Kết nối xử lý thanh toán"
 
 #: src/components/routes/event/EventDashboard/index.tsx:226
 msgid "Connect to Stripe"
@@ -2544,7 +2544,7 @@ msgstr "Hãy bắt đầu bằng cách tạo người tổ chức đầu tiên c
 
 #: src/components/routes/event/EventDashboard/index.tsx:215
 msgid "Link your Stripe account to receive funds from ticket sales."
-msgstr ""
+msgstr "Liên kết tài khoản Stripe của bạn để nhận tiền từ việc bán vé."
 
 #: src/components/routes/event/Webhooks/index.tsx:21
 msgid "Loading Webhooks"
@@ -3667,7 +3667,7 @@ msgstr ""
 
 #: src/components/routes/event/EventDashboard/index.tsx:180
 msgid "Publish Event"
-msgstr ""
+msgstr "Công bố sự kiện"
 
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
@@ -3727,7 +3727,7 @@ msgstr "Người nhận"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:110
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:195
 msgid "Redirecting to Stripe..."
-msgstr ""
+msgstr "Đang chuyển hướng đến Stripe..."
 
 #: src/components/common/OrdersTable/index.tsx:204
 #: src/components/common/OrdersTable/index.tsx:274
@@ -4912,7 +4912,7 @@ msgstr "Đơn hàng chưa thanh toán"
 
 #: src/components/routes/event/EventDashboard/index.tsx:191
 msgid "Unpublish Event"
-msgstr ""
+msgstr "Hủy công bố sự kiện"
 
 #: src/components/common/EventsDashboardStatusButtons/index.tsx:20
 #: src/components/common/EventStatusBadge/index.tsx:16
@@ -5454,7 +5454,7 @@ msgstr "Yêu cầu email của bạn thay đổi thành <0>{0}</0> đang chờ x
 
 #: src/components/routes/event/EventDashboard/index.tsx:171
 msgid "Your event must be live before you can sell tickets to attendees."
-msgstr ""
+msgstr "Sự kiện của bạn phải được phát trực tiếp trước khi bạn có thể bán vé cho người tham dự."
 
 #: src/components/routes/event/EventDashboard/index.tsx:164
 #~ msgid "Your event must be live before you can sell tickets."
